# sam-3d-body

./: demo.py  pyproject.toml
notebook/: utils.py
sam_3d_body/: sam_3d_body_estimator.py
src/sam_3d_body/: build_models.py  sam_3d_body_estimator.py
src/sam_3d_body/data/utils/: prepare_batch.py
src/sam_3d_body/models/heads/: __init__.py  mhr_head.py
src/sam_3d_body/models/meta_arch/: sam3d_body.py
