[project]
name = "sam_3d_body"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "appnope>=0.1.4",
    "black>=25.11.0",
    "chump>=1.6.0",
    "cython>=3.2.1",
    "detectron2",
    "dill>=0.4.0",
    "einops>=0.8.1",
    "ffmpeg>=1.4",
    "fvcore>=0.1.5.post20221221",
    "huggingface-hub>=1.1.5",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "joblib>=1.5.2",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "moge",
    "networkx==3.2.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "optree>=0.18.0",
    "pandas>=2.3.3",
    "pycocotools>=2.0.10",
    "pyrender>=0.1.45",
    "pyrootutils>=1.0.4",
    "pytest>=9.0.1",
    "pytorch-lightning>=2.5.6",
    "rich>=14.2.0",
    "roma>=1.5.4",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "wandb>=0.23.0",
    "webdataset>=1.0.2",
    "yacs>=0.1.8",
]

[tool.uv.extra-build-dependencies]
xtcocotools = ["numpy"]
detectron2 = [{ requirement = "torch", match-runtime = true }]


[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git", rev = "a1ce2f9" }
moge = { git = "https://github.com/microsoft/MoGe.git" }
